--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <div id='ruffle' class="gameloc"></div>
 <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
-<script id = "gabe">swfobject.embedSWF("../flashfiles/1on1soccer.swf", 'ruffle', 800, 600);</script>
+<script id = "gabe">swfobject.embedSWF("super_jogo3.swf", 'ruffle', 800, 600);</script>
 </body>
 </html>
 
