--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
     <script src="main.js"></script>
     <noscript>Your browser doesn't have JavaScript enabled. Please enable JavaScript or switch to a browser that
         supports it.</noscript>
+    <style>
+        body {
+            overflow: auto; /* Allow scrolling */
+        }
+    </style>
 </head>
 <body>
-    <button id="playbutton" onclick="window.location.href='https://arigony.github.io/jogo-super/game.html';">Play Now!</button>
+    <button id="playbutton" onclick="window.location.href='game.html';">Play Now!</button>
 </body>
 </html>
-
