--- a/game.html
+++ b/game.html
@@ -8,14 +8,21 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
   <title>Ruffle Example</title>
+  <link rel="stylesheet" href="style.css">
   <script src="main.js"></script>
   <noscript>Your browser doesn't have JavaScript enabled. Please enable JavaScript or switch to a browser that
     supports it.</noscript>
+  <style>
+      body {
+          overflow: auto; /* Allow scrolling */
+      }
+  </style>
 </head>
 <body>
 <div id='ruffle' class="gameloc"></div>
 <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
-<script id = "gabe">swfobject.embedSWF("super_jogo3.swf", 'ruffle', 800, 600);</script>
+<script id="gabe">
+    swfobject.embedSWF("super_jogo3.swf", 'ruffle', '100%', '100%');
+</script>
 </body>
 </html>
-
