--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
     <title>Ruffle Example</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
-    <noscript>Your browser doesn't have JavaScript enabled. Please enable JavaScript or switch to a browser that
-        supports it.</noscript>
-    <style>
-        body {
-            overflow: auto; /* Allow scrolling */
-        }
-    </style>
+    <noscript>Your browser doesn't have JavaScript enabled. Please enable JavaScript or switch to a browser that supports it.</noscript>
 </head>
 <body>
     <button id="playbutton" onclick="window.location.href='game.html';">Play Now!</button>
