--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <noscript>Your browser doesn't have JavaScript enabled. Please enable JavaScript or switch to a browser that supports it.</noscript>
 </head>
 <body>
-    <button id="playbutton" onclick="window.location.href='game.html';">Play Now!</button>
+    <button id="playbutton" onclick="location.href='game.html';">Play Now!</button>
 </body>
 </html>
