--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <title>Ruffle Example</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
-    <noscript>Your browser doesn't have JavaScript enabled. Please enable JavaScript or switch to a browser that supports it.</noscript>
+    <noscript>Your browser doesn't have JavaScript enabled. Please enable JavaScript or switch to a browser that
+        supports it.</noscript>
 </head>
 <body>
-    <button id="playbutton" onclick="location.href='game.html';">Play Now!</button>
+    <button id="playbutton" onclick="window.location.href='https://arigony.github.io/jogo-super/game.html';">Play Now!</button>
 </body>
 </html>
