--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
     <div id="ruffle" class="gameloc"></div>
     <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     <script id="gabe">
-        swfobject.embedSWF("super_jogo3.swf", "ruffle", "100%", "100%");
+        swfobject.embedSWF("super_jogo3.swf", "ruffle", 800, 600);
     </script>
 </body>
 </html>
