--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="title" content="jogo de funções orgânicas">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
-    <title>Ruffle Example</title>
+    <title>jogos de função orgânica</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
     <noscript>Your browser doesn't have JavaScript enabled. Please enable JavaScript or switch to a browser that
